Adjusting index footer to address clipping issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -188,4 +188,10 @@ li {
   height: 50px;
 }
 
+#index-footer {
+  text-align: center;
+  padding: 1rem;
+  height: 50px;
+}
+
 @import "mobile";
